# api/controllers/account.js
@@ -3,8 +3,10 @@ const accounts = require('../database/account')
 module.exports = function(pool) {
     return {
         async createAccount (req, res) {
+			console.log("createAccount reached")
             const { username, password} = req.enforcer.body
             const userId = await accounts.createAccount(pool, username, password)
+			console.log("account created in db")
 
             if (userId) {
                 res.set('location', '/api/accounts/' + userId)
@@ -18,6 +20,7 @@ module.exports = function(pool) {
         },
         
         async modifyAccount (req, res) {
+			console.log("modifyAccount reached")
             const data = req.enforcer.body
 			const { username } = req.enforcer.params
 			const client = await pool.connect()
@@ -25,12 +28,17 @@ module.exports = function(pool) {
 			try {
 				await client.query('BEGIN')
 				let account = await accounts.getAccountByUsername(client, username)
+				console.log("account found in db")
 
 				if (account === undefined) {
 					res.enforcer.status(404).send()
-				} 
+				}
+                else if (account.userid !== req.user.id) {
+					res.enforcer.status(401).send()
+                } 
                 else {
 					await accounts.modifyAccount(client, username, data)
+					console.log("account modified in db")
 					res.enforcer.status(200).send()
 				}
 				await client.query('COMMIT')
@@ -44,15 +52,44 @@ module.exports = function(pool) {
 			}
         },
         
-        
         async deleteAccount (req, res) {
+			console.log("deleteAccount reached")
             const { username } = req.enforcer.params
-			await accounts.deleteAccount(pool, username)
-			res.enforcer.status(204).send()
+			const client = await pool.connect()
+
+			try {
+				await client.query('BEGIN')
+				let account = await accounts.getAccountByUsername(client, username)
+				console.log("account found in db")
+
+				if (account === undefined) {
+					res.enforcer.status(204).send()
+				} 
+                else if (account.userid !== req.user.id) {
+					res.enforcer.status(403).send()
+				}
+                else {
+					await accounts.deleteAccount(pool, username)
+					console.log("account deleted from db")
+					res.enforcer.status(204).send()
+				}
+				await client.query('COMMIT')
+			} 
+            catch (e) {
+				await client.query('ROLLBACK')
+				throw e
+			} 
+            finally {
+				client.release()
+			}
+        },
+
+        async login (req, res) {
+
+        },
+
+        async logout (req, res) {
+            
         }
-
-        //async login (req, res) {}
-
-        //async logout (req, res) {}
     }
 }
